# pepgraph

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
pepgraph/: types.py
pepgraph/datasets/: __init__.py  records.py
pepgraph/tensors/: __init__.py  graph_piece.py  graph_tensor.py
